--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@ name {
   text-decoration: none;
   font-size: 1em;
 }
+	
+@media screen and (max-width:700px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width:520px) {
+
+.container {
+    width: 90%;
+  }
+
+.profile_pic img {
+    display: none;
+}
+}
+	
+	
 </style>
 
 </head>
