--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -72,6 +72,69 @@ name {
   font-size: 1em;
 }
 	
+.breadcrumb {
+  /*margin-bottom: 2em;*/
+  /* text-transform: uppercase; */
+  /* padding-bottom: 0.6em; */
+  padding-top: 1.5em;
+  font-size: 0.9em;
+  /* border-bottom: 1px dotted #eee; */
+}
+
+.breadcrumb a {
+  /*font-weight: 700;
+  color: #fff;*/
+  /*line-height: 1.5em;*/
+  color: #bbb;
+  text-decoration: none;
+  font-size: 1em;
+}
+
+.breadcrumb a:hover {
+  color: #ca1e00;
+}
+
+.breadcrumb h1
+{
+    font-weight:normal;
+    display:inline;
+    font-size: 1.1em;
+}
+
+.topnav
+{
+    display: inline;
+    /*text-align:right;*/
+    float:right;
+}
+
+.topnav a {
+    color: #bbb;
+}
+
+nav {
+    margin:0 auto;
+}
+
+nav ul
+{
+    margin-top:0;
+    margin-bottom:0;
+    margin-right:0;
+    padding-right:0;
+    padding-left:0;
+}
+
+nav ul li {
+  display: inline-block;
+  /*margin-left: 0.5em;
+  margin-right: 0.5em;*/
+  padding-left:0.5em;
+  font-size: 1.1em;
+  margin-bottom: 0;
+}
+
+	
 @media screen and (max-width:700px) {
   .container {
     width: 90%;
