--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
 <div class="sections">
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15</li>
       <li>We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
       <li><a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">Our paper on Turkish image captioning</a> won the Alper Atalay Best Student Paper Award (First Prize) at SIU 2016.</li>
       <li>Our work on Turkish image description generation is featured on <a href="https://www.youtube.com/watch?v=7wFC-J1Lnzs" target="_blank">national TV</a>.</li>
@@ -159,9 +160,10 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    I sometimes speak at industry related events and developer meetups and things in between
    <ul class="bullet">
-      <li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>
+       <li><a href="talks/teaching-machines-to-see" target="_self">Teaching Machines to Understand What They See <b>(Upcoming)</b></a></li>
+      <!--<li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>-->
       <!--<li><a href="talk/an-unexpected-journey" target="_self">An Unexpected Journey</a></li>-->
-      <li><a href="/talks/i-can-but-i-wont" target="_self">I Can, But I Won't</a></li>
+      <!--<li><a href="/talks/i-can-but-i-wont" target="_self">I Can, But I Won't</a></li>-->
       <!--<li><a href="/talk/internet-of-things" target="_self">IoT and What It Means For Devs</a></li><li><a href="/talk/android-wear" target="_self">Developing Android Wear Apps</a></li>-->
    </ul>
    <br><span class="subsection" id="papers"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_blank">Papers</a></span>
