--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -155,8 +155,9 @@ nav ul li {
 <body>
 <div class="container">
 <header>
-    <section class="header"><section class="breadcrumb"><h1><a href="/">Semih Yağcıoğlu</a></h1><nav class="topnav"><ul><li><a href="/#contact" target="_self">Contact</a></li><ul></nav></section></section>
+    <section class="header"><section class="breadcrumb"><h1><a href="/">Semih Yağcıoğlu</a></h1><nav class="topnav"><ul><li><a href="/#contact" target="_self">Contact</a></li></ul></nav></section></section>
 </header>
+	    <h1>Teaching Machines to Understand What They See</h1>
 <blockquote><p>Humans rely a lot on their visual perception to understand the world. Can machines do the same? In this talk we will briefly go over the basics of machine learning with biologically inspired neural networks. We will then discuss the details of convolutional neural networks and how to use them to understand images.</p></blockquote>
 
 
