--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -134,6 +134,12 @@ nav ul li {
   margin-bottom: 0;
 }
 
+blockquote {
+  padding: 0px 30px 0px 30px;
+  font-size: 90%;
+  color:#666;
+}
+
 	
 @media screen and (max-width:700px) {
   .container {
@@ -157,13 +163,32 @@ nav ul li {
 <header>
     <section class="header"><section class="breadcrumb"><h1><a href="/">Semih Yağcıoğlu</a></h1><nav class="topnav"><ul><li><a href="/#contact" target="_self">Contact</a></li></ul></nav></section></section>
 </header>
-	    <h3>Teaching Machines to Understand What They See</h3>
+	<center><h3>Teaching Machines to Understand What They See</h3></center>
+	
+	<script async class="speakerdeck-embed" data-id="be8b89e4613d4f42a2c7012774f08b3a" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+	
 <blockquote><p>Humans rely a lot on their visual perception to understand the world. Can machines do the same? In this talk we will briefly go over the basics of machine learning with biologically inspired neural networks. We will then discuss the details of convolutional neural networks and how to use them to understand images.</p></blockquote>
 
+<p><b>Part I - Background</b></p>
+<ul>
+<li>What is Learning and How Machines Learn?</li>
+<li>A Brief Introduction to Neural Networks</li>
+</ul>
+<p><b>Part II - Understanding Images</b></p>
+<ul>
+<li>How Our Visual System Works</li>
+<li>Convolutional Neural Networks</li>
+</ul>
+<p><b>Part III - Building&nbsp;a ConvNet From Scratch</b></p>
+<ul>
+<li>How to Build a CNN for Object Recognition with Python in Keras</li>
+</ul>
+
+<p>IPython Notebook for the tutorial is also available <a href="https://github.com/semihyagcioglu/talks/blob/master/2017/pydata-istanbul-april/teaching-machines-to-understand-what-they-see.ipynb">here</a>.</p>
 
 <footer id="footer">
-      <!--<a href="/" target="_self">Home</a> · <a href="/about" target="_self">About</a> · <a href="http://eepurl.com/X1xrL" target="_blank">Subscribe</a> · <a href="http://semihyagcioglu.com/contact" target="_self">Contact</a> · <a href="/speaking" target="_self">Talks</a> · <a href="/essays" target="_self">Posts</a> · <a href="/projects" target="_self">Projects</a>· --><!--<a href="/" target="_self">Home</a><div id="copyright">© 2015</div>-->
 </footer>
 </div>
 </div>
-</body></html>
+</body>
+</html>
