--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -163,12 +163,14 @@ blockquote {
 <header>
     <section class="header"><section class="breadcrumb"><h1><a href="/">Semih Yağcıoğlu</a></h1><nav class="topnav"><ul><li><a href="/#contact" target="_self">Contact</a></li></ul></nav></section></section>
 </header>
-	<center><h3>Teaching Machines to Understand What They See</h3></center>
+	
+	<img src="files/teaching-machines-to-see.jpg">
 	
 	<script async class="speakerdeck-embed" data-id="be8b89e4613d4f42a2c7012774f08b3a" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 	
 <blockquote><p>Humans rely a lot on their visual perception to understand the world. Can machines do the same? In this talk we will briefly go over the basics of machine learning with biologically inspired neural networks. We will then discuss the details of convolutional neural networks and how to use them to understand images.</p></blockquote>
 
+<h3>Teaching Machines to Understand What They See</h3>
 <p><b>Part I - Background</b></p>
 <ul>
 <li>What is Learning and How Machines Learn?</li>
@@ -188,7 +190,6 @@ blockquote {
 
 <footer id="footer">
 </footer>
-</div>
 </div>
 </body>
 </html>
