--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -164,7 +164,7 @@ blockquote {
     <section class="header"><section class="breadcrumb"><h1><a href="/">Semih Yağcıoğlu</a></h1><nav class="topnav"><ul><li><a href="/#contact" target="_self">Contact</a></li></ul></nav></section></section>
 </header>
 	
-	<img src="files/teaching-machines-to-see.jpg">
+	<img src="files/teaching-machines-to-see.jpg" style="max-width: 100%; width: 100%; border-radius: 4px;">
 	
 	<script async class="speakerdeck-embed" data-id="be8b89e4613d4f42a2c7012774f08b3a" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 	
