--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -165,7 +165,7 @@ blockquote {
 </header>
 	
 	<img src="files/teaching-machines-to-see.jpg" style="max-width: 100%; width: 100%; border-radius: 4px;">
-	
+	<p>This is a tutorial I gave at PyData Istanbul. In this talk we briefly go over the basics of Machine Learning and build a ConvNet from scratch.</p>
 	<script async class="speakerdeck-embed" data-id="be8b89e4613d4f42a2c7012774f08b3a" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 	
 <blockquote><p>Humans rely a lot on their visual perception to understand the world. Can machines do the same? In this talk we will briefly go over the basics of machine learning with biologically inspired neural networks. We will then discuss the details of convolutional neural networks and how to use them to understand images.</p></blockquote>
