--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    I sometimes speak at industry related events and developer meetups and things in between
    <ul class="bullet">
-       <li><a href="talks/teaching-machines-to-see" target="_self">Teaching Machines to Understand What They See <b>(Upcoming)</b></a></li>
+       <li><a href="talks/teaching-machines-to-see" target="_self">Teaching Machines to Understand What They See</a></li>
       <!--<li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>-->
       <!--<li><a href="talk/an-unexpected-journey" target="_self">An Unexpected Journey</a></li>-->
       <!--<li><a href="/talks/i-can-but-i-wont" target="_self">I Can, But I Won't</a></li>-->
