--- a/talks/teaching-machines-to-see/index.html
+++ b/talks/teaching-machines-to-see/index.html
@@ -188,6 +188,7 @@ blockquote {
 
 <p>IPython Notebook for the tutorial is also available <a href="https://github.com/semihyagcioglu/talks/blob/master/2017/pydata-istanbul-april/teaching-machines-to-understand-what-they-see.ipynb">here</a>.</p>
 
+<p><iframe width="640" height="360" src="https://www.youtube.com/embed/FgQTDqNTbkc" frameborder="0" allowfullscreen></iframe></p>
 <footer id="footer">
 </footer>
 </div>
