--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
 <div class="sections">
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
-      <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15</li>
+      <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15.</li>
       <li>We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
       <li><a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">Our paper on Turkish image captioning</a> won the Alper Atalay Best Student Paper Award (First Prize) at SIU 2016.</li>
       <li>Our work on Turkish image description generation is featured on <a href="https://www.youtube.com/watch?v=7wFC-J1Lnzs" target="_blank">national TV</a>.</li>
@@ -144,6 +144,10 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
             </p><p></p><p></p></td></tr></tbody></table>
       --><span class="subsection" id="essays"><a href="#essays" target="_self">Posts</a></span>
    <ul class="bullet">
+      <li>
+         <!-- Apr 2017  --><a href="https://medium.com/hucvl-stories/setting-up-a-machine-for-deep-learning-f9a222bc457b" target="_self">Setting Up a Machine for Deep Learning</a>
+      </li>
+	   
       <li>
          <!-- Apr 2016  --><a href="https://medium.com/hucvl-stories/image-captioning-a-retrospect-on-our-latest-study-4e54a864159e" target="_self">Image Captioning: A Retrospect on Our Latest Study</a>
       </li>
