--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Semih Yağcıoğlu</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet">
 <style>
 body {
-    color: #444;
-    font-family: Verdana, sans-serif;
+    color: #222;
+    font-family: 'Quattrocento', serif;
     font-weight: normal;
     background-color: #fefefe;
 }
@@ -27,7 +28,7 @@ a:hover {
 }
 
 .container{
-    width: 640px;
+    width: 480px;
     font-size: 13px;
     margin: 0 auto;
     vertical-align: middle;
@@ -42,7 +43,7 @@ name {
 }
   
 #intro-text {
-  margin-top: 4em;
+  margin-top: 8em;
   margin-bottom:4em;  
   text-align: left;
   display: block;
@@ -100,6 +101,7 @@ name {
 }
 	
 </style>
+	
 </head>
 
 <body>
