--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Semih Yağcıoğlu</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.png" type="image/png">
-    <link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento:400,700&amp;subset=latin-ext" rel="stylesheet">
 <style>
 body {
     color: #222;
