--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@ a:hover {
 }
 
 .container{
-    width: 480px;
-    font-size: 13px;
+    width: 560px;
+    font-size: 14px;
     margin: 0 auto;
     vertical-align: middle;
     text-align: left;
     overflow: hidden;
     margin-bottom: .5em;
     line-height: 1.5em;
+    padding-bottom:2em
 }
   
 name {
-    font-size: 1.5em;
+    font-size: 2em;
 }
   
 #intro-text {
@@ -116,7 +117,7 @@ name {
         <br>
 I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision group</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. I am interested in Machine Learning and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
 <br><br>
-<p style="margin-left:10%"><a href="mailto:semihyagcioglu@yahoo.com"><span class="via">Email</span></a> | <a href="https://github.com/semihyagcioglu">GitHub</a> | <a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en">Scholar</a> | <a href="http://linkedin.com/in/semih/"> LinkedIn </a> | <a href="http://www.twitter.com/semihyagcioglu">Twitter</a> 
+<p style="margin-left:0%"><a href="mailto:semihyagcioglu@yahoo.com"><span class="via">Email</span></a> | <a href="https://github.com/semihyagcioglu">GitHub</a> | <a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en">Scholar</a> | <a href="http://linkedin.com/in/semih/"> LinkedIn </a> | <a href="http://www.twitter.com/semihyagcioglu">Twitter</a> 
 </p>
     </div>
     </div>
