--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Semih Yağcıoğlu</title>
@@ -28,7 +28,7 @@ a:hover {
 }
 
 .container{
-    width: 560px;
+    width: 500px;
     font-size: 14px;
     margin: 0 auto;
     vertical-align: middle;
@@ -53,7 +53,7 @@ name {
 .profile_pic img{
     width: 190px;
     border-radius: 3%;
-    margin: 30px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
     float: right;
     height: auto;
     padding: 4px;
@@ -100,9 +100,7 @@ name {
     display: none;
 }
 }
-	
-</style>
-	
+</style>	
 </head>
 
 <body>
