--- a/index.html
+++ b/index.html
@@ -153,17 +153,18 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
       <li>
          <!-- Apr 2016  --><a href="https://medium.com/hucvl-stories/image-captioning-a-retrospect-on-our-latest-study-4e54a864159e" target="_self">Image Captioning: A Retrospect on Our Latest Study</a>
       </li>
-      <li>
-         <!-- Apr 2015  --><a href="https://semihyagcioglu.tumblr.com/128125956027/doing-things" target="_self">Doing Things</a>
+      <!--<li>
+         <!-- Apr 2015  --<a href="https://semihyagcioglu.tumblr.com/128125956027/doing-things" target="_self">Doing Things</a>
       </li>
       <li>
-         <!-- Apr 2015  --><a href="https://semihyagcioglu.tumblr.com/116585897172/25" target="_self">25</a>
+         <!-- Apr 2015  --<a href="https://semihyagcioglu.tumblr.com/116585897172/25" target="_self">25</a>
       </li>
-      <!--<li><a href="/post/97565360692/try-not" target="_self">Try Not</a></li>-->
+      <!--<li><a href="/post/97565360692/try-not" target="_self">Try Not</a></li>--
       <li>
-         <!-- Dec 2013  --> <a href="https://semihyagcioglu.tumblr.com/70798815261/this-is-how-i-work" target="_self">This Is How I Work</a>
+         <!-- Dec 2013  -- <a href="https://semihyagcioglu.tumblr.com/70798815261/this-is-how-i-work" target="_self">This Is How I Work</a>
       </li>
       <li><a href="https://semihyagcioglu.tumblr.com/69678955624/on-finding-passion" target="_self">On Finding Passion</a></li>
+      -->   
    </ul>
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    I sometimes speak at industry related events and developer meetups and things in between
