--- a/index.html
+++ b/index.html
@@ -7,100 +7,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Quattrocento:400,700&amp;subset=latin-ext" rel="stylesheet">
-<style>
-body {
-    color: #222;
-    font-family: 'Quattrocento', serif;
-    font-weight: normal;
-    background-color: #fefefe;
-}
-
-input:focus {outline:none !important;}
-  
-a {
-  color:#0089c9;
-  text-decoration:none;
-  transition: color .2s ease;
-}
-  
-a:hover {
-  text-decoration: underline;
-}
-
-.container{
-    width: 500px;
-    font-size: 14px;
-    margin: 0 auto;
-    vertical-align: middle;
-    text-align: left;
-    overflow: hidden;
-    margin-bottom: .5em;
-    line-height: 1.5em;
-    padding-bottom:2em
-}
-  
-name {
-    font-size: 2em;
-}
-  
-#intro-text {
-  margin-top: 8em;
-  margin-bottom:4em;  
-  text-align: left;
-  display: block;
-}
-
-.profile_pic img{
-    width: 190px;
-    border-radius: 3%;
-    margin: 0px 0px 0px 10px;
-    float: right;
-    height: auto;
-    padding: 4px;
-}
-
-.sections {
-  overflow: hidden;
-  padding-left: 0em;
-  padding-right: 0em;
-  margin-top: 1em;
-}
-
-.subsection {
-  color: #444;
-  font-size: 1.1em;
-  font-weight:bold;
-}
-
-.subsection a {
-  color: #444;
-  text-decoration: none;
-  font-size: 1em;
-}
-
-.subsection a:hover {
-  color: #000;
-  text-decoration: none;
-  font-size: 1em;
-}
-	
-@media screen and (max-width:700px) {
-  .container {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width:520px) {
-
-.container {
-    width: 90%;
-  }
-
-.profile_pic img {
-    /*display: none;*/
-}
-}
-</style>	
+    <link href="style.css" type="text/css">	
 </head>
 
 <body>
@@ -134,7 +41,6 @@ I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer 
    I am interested in machine intelligence and how machines learn. In particular
    <ul class="bullet">
       <li>Deep Learning and its applications in vision and language</li>
-      <li>Image description generation and machine translation</li>
    </ul>
    <br><!--<span class="subsection" id="projects"><a href="#projects" target="_self">Projects</a></span>--><!--<ul class="project"><li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.mits.eutrafcdss&amp;t=ZDc2ZDIyOWVjMzAwMTMxZTQ3NjA5YzM2MjlmNTIwYThkN2VmNjliMyxUbU4zdWpESg%3D%3D" target="_self">EUTRAF Clinical Decision Support System</a>--><!--<div class="project-detail">The EUTRAF CDSS application is a mobile Clinical Decision Support System to assess the risk of Ischemic Stroke and/or Thromboembolic Events in patients with Atrial Fibrillation.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fgithub.com%2Fjarvy%2Fjarvy&amp;t=Y2JhMGRhMjYxZjk1YzA5ZmEwMzI0ZTI3NzdkYzliZjJhZjgxMTJkMyxUbU4zdWpESg%3D%3D" target="_self">Jarvy: Python Intelligent Assistant for Humans</a>--><!--<div class="project-detail">Jarvy, aims to help humans by trying to understand them and figuring out best ways to respond to them. [<a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fgithub.com%2Fjarvy%2Fjarvy&amp;t=Y2JhMGRhMjYxZjk1YzA5ZmEwMzI0ZTI3NzdkYzliZjJhZjgxMTJkMyxUbU4zdWpESg%3D%3D" target="_self">GitHub Page</a>]</div>--><!--</li>--><!--<li><a href="http://semihyagcioglu.com/projects/image-captioning" target="_self">A Distributed Representation Based Query Expansion Approach for Image Captioning</a>--><!--<div class="project-detail">In this study our aim is to generate captions that describes images more accurately. [<a href="http://semihyagcioglu.com/projects/image-captioning" target="_self">Project Page</a>]</div>--><!--</li>--><!--<li><a href="http://semihyagcioglu.com/projects/image-geolocalization" target="_self">City Scale Image Geolocalization via Dense Scene Alignment</a>--><!--<div class="project-detail">In this project we proposed a novel coarse-to-fine strategy for image geolocalization that scales up well with very large datasets. [<a href="http://semihyagcioglu.com/projects/image-geolocalization" target="_self">Project Page</a>]</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.mits.ekardiyo%26hl%3Den&amp;t=OWVlY2QxODIwODhmYWRjYTlmNzU0ODRiOWJjYjcwNzkzMjE0NWYxMyxUbU4zdWpESg%3D%3D" target="_blank">Ekardiyo</a>--><!--<div class="project-detail">Mobile education app developed for cardiologists to enchance their continued education. Download on <a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fitunes.apple.com%2Ftr%2Fapp%2Fekardiyo%2Fid918112607%3Fmt%3D8&amp;t=NmU5YmQxNzQ3NjliNTBjMTk2NzQ2YWE1NDZhZmU4NTM2MmMwYmI0YSxUbU4zdWpESg%3D%3D" target="_blank">App Store</a> and <a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.mits.ekardiyo%26hl%3Den&amp;t=OWVlY2QxODIwODhmYWRjYTlmNzU0ODRiOWJjYjcwNzkzMjE0NWYxMyxUbU4zdWpESg%3D%3D" target="_blank">Google Play Store</a>.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fwww.eutraf.eu%2F&amp;t=ZjEzOTU5M2YwMzg1NWRhYmIyOWNlMTY0OGU2MjcyYzU2MjY2Y2VkMCxUbU4zdWpESg%3D%3D" target="_blank">EUTRAF Research Collaboration Platform</a>--><!--<div class="project-detail">Project was developed to facilitate the collaboration between the <a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fwww.eutraf.eu%2Fconsortium%2F&amp;t=M2JmMjBjNjI4NzQ3ZDkwNmNiYzMwN2VjZjY1NDgyZjQ3NDQ5N2E0YSxUbU4zdWpESg%3D%3D" target="_blank"> consortium members</a> in the <a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fwww.eutraf.eu%2F&amp;t=ZjEzOTU5M2YwMzg1NWRhYmIyOWNlMTY0OGU2MjcyYzU2MjY2Y2VkMCxUbU4zdWpESg%3D%3D" target="_blank">EUTRAF</a> project.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=http%3A%2F%2Fmits.com.tr%2Fvime.html&amp;t=YWMxODZkYzNhMzllYmFmMzg4ZjllNTRiM2M0Y2MzNTU4ZTAyNzMwZSxUbU4zdWpESg%3D%3D" target="_blank">Virtual Medical Events</a>--><!--<div class="project-detail">Web based virtual education and conference platform developed specificially for Medical Doctors which is integrated with 20+ clients.</div>--><!--</li>--><!--<li><a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fdl.dropboxusercontent.com%2Fu%2F16169065%2Fhbpr.pdf&amp;t=NTMyMzA4NmEwZTlkMDhkMjVjMDQ4YzM4NWI2ODJjOTcyMWM3MjA4MixUbU4zdWpESg%3D%3D" target="_blank">Human Body Part Recognition</a>--><!--<div class="project-detail">The aim of the project was to detect human body parts from video frames using pictorial structures. [<a href="http://t.umblr.com/redirect?z=https%3A%2F%2Fdl.dropboxusercontent.com%2Fu%2F16169065%2Fhbpr.pdf&amp;t=NTMyMzA4NmEwZTlkMDhkMjVjMDQ4YzM4NWI2ODJjOTcyMWM3MjA4MixUbU4zdWpESg%3D%3D" target="_blank">PDF</a>]</div>--><!--</li>--><!--</ul>--><!--<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody><tr><td width="20%"><a href="https://play.google.com/store/apps/details?id=com.mits.eutrafcdss" target="_self"><img alt="EUTRAF CDSS" src="https://lh3.googleusercontent.com/0hZLXRwcqciIuV6dBw1t7zVuJCAmdUX4bNVCxNmtG8oSxM0sdfQSEct-cMUOzzah2tU=w300-rw" width="100px"/></a></td><td valign="top" width="80%"><p><a href="https://play.google.com/store/apps/details?id=com.mits.eutrafcdss">
       The EUTRAF Clinical Decision Support System</a><br></p><p></p><p>A mobile Clinical Decision Support System to assess the risk of Ischemic Stroke and/or Thromboembolic Events in patients with Atrial Fibrillation.
