--- a/projects/image-captioning/index.html
+++ b/projects/image-captioning/index.html
@@ -1,7 +1,33 @@
 
-
-<!DOCTYPE html><html lang="en"><head><title>A Distributed Representation Based Query Expansion Approach for Image Captioning</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="title" content="A Distributed Representation Based Query Expansion Approach for Image Captioning" /><meta name="description" content="In this paper, we propose a novel query expansion approach for improving transfer-based automatic image captioning."><meta name="author" content="Semih Yagcioglu, Erkut Erdem, Aykut Erdem, Ruket Çakıcı"><meta name="keywords" content="Image Captioning, Word Embedding, Distributional Compositional Semantics, Image Retrieval, Query Expansion, ACL, Association for Computational Linguistics, ACL 2015, Beijing, China, Natural Language Processing, Computer Vision" /><!--Facebook and Twitter Descriptions--><meta property="og:title" content="A Distributed Representation Based Query Expansion Approach for Image Captioning" /><meta property="og:description" 
-  content="In this paper, we propose a novel query expansion approach for improving transfer-based automatic image captioning." /><meta property="og:type" content="article" /><meta property="og:image" content="files/sample-results.jpg" /><meta property="og:site_name" content="Semih Yagcioglu" /><meta name="twitter:card" content="summary" /><meta name="twitter:site" content="@semihyagcioglu" /><meta name="twitter:title" content="A Distributed Representation Based Query Expansion Approach for Image Captioning" /><meta name="twitter:description" content="In this paper, we propose a novel query expansion approach for improving transfer-based automatic image captioning." /><meta name="twitter:image" content="https://files/sample-results.jpg" /><!--End of Facebook and Twitter Descriptions--><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta content="True" name="HandheldFriendly"><meta content="320" name="MobileOptimized"><meta content="width=device-width, initial-scale=1" name="viewport"><style>figure{margin:0}.tmblr-iframe{position:absolute}.tmblr-iframe.hide{display:none}</style><link rel="canonical" href="http://www.semihyagcioglu.com/projects/image-captioning"><link rel="shortcut icon" href="http://vision.cs.hacettepe.edu.tr/ico/favicon.png"><!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>--><link media="all" href="style.css" type="text/css" rel="StyleSheet"><style type="text/css" media="all">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>A Distributed Representation Based Query Expansion Approach for Image Captioning</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="title" content="A Distributed Representation Based Query Expansion Approach for Image Captioning" />
+    <meta name="description" content="In this paper, we propose a novel query expansion approach for improving transfer-based automatic image captioning.">
+    <meta name="author" content="Semih Yagcioglu, Erkut Erdem, Aykut Erdem, Ruket Çakıcı">
+    <meta name="keywords" content="Image Captioning, Word Embedding, Distributional Compositional Semantics, Image Retrieval, Query Expansion, ACL, Association for Computational Linguistics, ACL 2015, Beijing, China, Natural Language Processing, Computer Vision" />
+    <!--Facebook and Twitter Descriptions-->
+    <meta property="og:title" content="A Distributed Representation Based Query Expansion Approach for Image Captioning" />
+    <meta property="og:description" 
+  content="In this paper, we propose a novel query expansion approach for improving transfer-based automatic image captioning." />
+    <meta property="og:type" content="article" /><meta property="og:image" content="files/sample-results.jpg" />
+    <meta property="og:site_name" content="Semih Yagcioglu" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@semihyagcioglu" />
+    <meta name="twitter:title" content="A Distributed Representation Based Query Expansion Approach for Image Captioning" />
+    <meta name="twitter:description" content="In this paper, we propose a novel query expansion approach for improving transfer-based automatic image captioning." />
+    <meta name="twitter:image" content="https://files/sample-results.jpg" /><!--End of Facebook and Twitter Descriptions-->
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta content="True" name="HandheldFriendly">
+    <meta content="320" name="MobileOptimized">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="canonical" href="http://www.semihyagcioglu.com/projects/image-captioning">
+    <link rel="shortcut icon" href="http://vision.cs.hacettepe.edu.tr/ico/favicon.png">
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
+    <link media="all" href="style.css" type="text/css" rel="StyleSheet">
+    <style type="text/css" media="all">
 #primarycontent {
     MARGIN-LEFT: auto;
     MARGIN-RIGHT: auto; 
@@ -12,7 +38,17 @@
 BODY {
     TEXT-ALIGN: center;
 }
-</style><link rel="canonical" href="http://semihyagcioglu.com/projects/image-captioning" /></head><body><!--YANDEX IMAGE--><div><img src="//mc.yandex.ru/watch/22127711" style="position:absolute; left:-9999px;" alt="" /></div><br><div id="primarycontent"><center><h1>A Distributed Representation Based Query Expansion Approach for Image Captioning</h1><p>The 53rd Annual Meeting of the Association for Computational Linguistics (ACL 2015)</p><h4><a href="http://www.semihyagcioglu.com">Semih Yagcioglu<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</style>
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento:400,700&amp;subset=latin-ext" rel="stylesheet">
+    <link href="../../style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <!--YANDEX IMAGE-->
+    <div>
+      <img src="//mc.yandex.ru/watch/22127711" style="position:absolute; left:-9999px;" alt="" />
+    </div>
+    <br>
+    <div id="primarycontent"><center><h1>A Distributed Representation Based Query Expansion Approach for Image Captioning</h1><p>The 53rd Annual Meeting of the Association for Computational Linguistics (ACL 2015)</p><h4><a href="http://www.semihyagcioglu.com">Semih Yagcioglu<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="http://web.cs.hacettepe.edu.tr/~erkut">Erkut Erdem<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="http://web.cs.hacettepe.edu.tr/~aykut">Aykut Erdem<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="http://ceng.metu.edu.tr/~ruken">Ruket Çakıcı<sup>2</sup></a><h5 style="
