--- a/projects/image-captioning/index.html
+++ b/projects/image-captioning/index.html
@@ -33,7 +33,7 @@
       <img src="//mc.yandex.ru/watch/22127711" style="position:absolute; left:-9999px;" alt="" />
     </div>
     <br>
-    <div id="primarycontent"><center><h1>A Distributed Representation Based Query Expansion Approach for Image Captioning</h1><p>The 53rd Annual Meeting of the Association for Computational Linguistics (ACL 2015)</p><h4><a href="http://www.semihyagcioglu.com">Semih Yagcioglu<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="container"><center><name>A Distributed Representation Based Query Expansion Approach for Image Captioning</name><p>The 53rd Annual Meeting of the Association for Computational Linguistics (ACL 2015)</p><h4><a href="http://www.semihyagcioglu.com">Semih Yagcioglu<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="http://web.cs.hacettepe.edu.tr/~erkut">Erkut Erdem<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="http://web.cs.hacettepe.edu.tr/~aykut">Aykut Erdem<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="http://ceng.metu.edu.tr/~ruken">Ruket Çakıcı<sup>2</sup></a><h5 style="
