--- a/projects/image-geolocalization/index.html
+++ b/projects/image-geolocalization/index.html
@@ -13,26 +13,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="canonical" href="http://www.semihyagcioglu.com/projects/image-geolocalization">
         <link rel="shortcut icon" href="http://vision.cs.hacettepe.edu.tr/ico/favicon.png">
-        <link media="all" href="style.css" type="text/css" rel="StyleSheet">
-        <style type="text/css" media="all">
-            #primarycontent {
-            MARGIN-LEFT: auto;
-            MARGIN-RIGHT: auto; 
-            TEXT-ALIGN: justify; 
-            max-width: 700px;
-            width: 80%;
-            }
-            BODY {
-            TEXT-ALIGN: center;
-            }
-        </style>
+        <link href="https://fonts.googleapis.com/css?family=Quattrocento:400,700&amp;subset=latin-ext" rel="stylesheet">
+    <link href="../../style.css" type="text/css" rel="stylesheet">
         <link rel="canonical" href="/projects/image-geolocalization" />
     </head>
     <body>
         <!--YANDEX IMAGE-->
         <div><img src="//mc.yandex.ru/watch/22127711" style="position:absolute; left:-9999px;" alt="" /></div>
         <br>
-        <div id="primarycontent">
+        <div class="container">
             <center>
                 <h1>City Scale Image Geolocalization via Dense Scene Alignment</h1>
                 <p>WACV 2015: IEEE Winter Conference on Applications of Computer Vision</p>
