--- a/projects/image-geolocalization/index.html
+++ b/projects/image-geolocalization/index.html
@@ -23,7 +23,7 @@
         <br>
         <div class="container">
             <center>
-                <h1>City Scale Image Geolocalization via Dense Scene Alignment</h1>
+                <name>City Scale Image Geolocalization via Dense Scene Alignment</name>
                 <p>WACV 2015: IEEE Winter Conference on Applications of Computer Vision</p>
                 <h4>
                     <a href="http://www.semihyagcioglu.com">Semih Yagcioglu</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
