--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </header>
 <!-- SECTIONS -->
 <div class="sections">
-	I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision group</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
+	I am a PhD student in the <a href="http://vision.cs.hacettepe.edu.tr/">Computer Vision Lab</a> working with <a href="http://web.cs.hacettepe.edu.tr/~aykut/" title="Aykut Erdem" target="_blank">Aykut Erdem</a> and <a href="http://web.cs.hacettepe.edu.tr/~erkut/" title="Erkut Erdem" target="_blank">Erkut Erdem</a>. I am interested in learning algorithms and work at the intersection of language and vision. I want to understand intelligence and help machines solve challenging problems. 
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
