--- a/index.html
+++ b/index.html
@@ -65,14 +65,13 @@
          <!-- Apr 2016  --><a href="https://medium.com/hucvl-stories/image-captioning-a-retrospect-on-our-latest-study-4e54a864159e" target="_self">Image Captioning: A Retrospect on Our Latest Study</a>
       </li>
       <li>
-         <!-- Apr 2015  --<a href="https://semihyagcioglu.tumblr.com/128125956027/doing-things" target="_self">Doing Things</a>
+         <a href="https://semihyagcioglu.tumblr.com/128125956027/doing-things" target="_self">Doing Things</a>
       </li>
       <li>
-         <!-- Apr 2015  --<a href="https://semihyagcioglu.tumblr.com/116585897172/25" target="_self">25</a>
+         <a href="https://semihyagcioglu.tumblr.com/116585897172/25" target="_self">25</a>
       </li>
-      <!--<li><a href="/post/97565360692/try-not" target="_self">Try Not</a></li>--
       <li>
-         <!-- Dec 2013  -- <a href="https://semihyagcioglu.tumblr.com/70798815261/this-is-how-i-work" target="_self">This Is How I Work</a>
+         <a href="https://semihyagcioglu.tumblr.com/70798815261/this-is-how-i-work" target="_self">This Is How I Work</a>
       </li>
       <li><a href="https://semihyagcioglu.tumblr.com/69678955624/on-finding-passion" target="_self">On Finding Passion</a></li>
         
