--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<br>Computer Vision Lab (HUCVL)  
 	<br>Hacettepe University
 	<br><br>
-<p style="margin-left:0%"><a href="mailto:semihyagcioglu@yahoo.com"><span class="via">Email</span></a> | <a href="https://github.com/semihyagcioglu">GitHub</a> | <a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en">Scholar</a> | <a href="http://linkedin.com/in/semih/"> LinkedIn </a> | <a href="http://twitter.com/semihyagcioglu">Twitter</a> 
+<p style="margin-left:0%"><a href="mailto:semihyagcioglu@yahoo.com"><span class="via">Email</span></a> | <a href="https://github.com/semihyagcioglu">GitHub</a> | <a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en">Scholar</a> | <a href="http://twitter.com/semihyagcioglu">Twitter</a> 
 </p>
     </div>
     </div>
