--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       --><span class="subsection" id="essays"><a href="#essays" target="_self">Posts</a></span>
    <ul class="bullet">
       <li>
+         <!-- Sep 2017  --><a href="https://medium.com/@semihyagcioglu/whats-hot-in-your-field-8377c7cdd54e" target="_self">What's Hot In Your Field</a>
+      </li>   
+      <li>
          <!-- Apr 2017  --><a href="https://medium.com/hucvl-stories/setting-up-a-machine-for-deep-learning-f9a222bc457b" target="_self">Setting Up a Machine for Deep Learning</a>
       </li>
 	   
