--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>We are looking for AI and ML enthusiasts at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
       <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15.</li>
       <li>We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
       <li><a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">Our paper on Turkish image captioning</a> won the Alper Atalay Best Student Paper Award (First Prize) at SIU 2016.</li>
