--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>We are organizing an <a href="https://www.meetup.com/Yapay-Zeka-ve-Makine-Ogrenmesi-Meetup/" target="_blank">AI and ML meetup</a> in Ankara, starting on Nov 6.</li>
       <li>We are looking for AI and ML enthusiasts at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
       <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15.</li>
       <li>We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
