--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>I'll be speaking at <a href="http://securetr.org/index.php?id=speakers" target="_blank">IWICS</a> about AI and its Applications in Cybersecurity on Dec 8.</li>
       <li>We are organizing an <a href="https://www.meetup.com/Yapay-Zeka-ve-Makine-Ogrenmesi-Meetup/" target="_blank">AI and ML meetup</a> in Ankara, starting on Nov 6.</li>
       <li>We are looking for AI and ML enthusiasts at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
       <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15.</li>
@@ -83,6 +84,7 @@
    </ul>
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    <ul class="bullet">
+       <li><a href="#" target="_self">How Machines Learn</a></li>
        <li><a href="talks/teaching-machines-to-see" target="_self">Teaching Machines to Understand What They See</a></li>
       <!--<li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>-->
       <!--<li><a href="talk/an-unexpected-journey" target="_self">An Unexpected Journey</a></li>-->
