--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
-      <li>I'll be speaking at METU about Machine Comprehension and Reasoning with Learning Algorithms on Apr 24.</li>
-      <li>I'll be speaking at <a href="http://securetr.org/index.php?id=speakers" target="_blank">IWICS</a> about AI and its Applications in Cybersecurity on Dec 8.</li>
-      <li>We are organizing an <a href="https://www.meetup.com/Yapay-Zeka-ve-Makine-Ogrenmesi-Meetup/" target="_blank">AI and ML meetup</a> in Ankara, starting on Nov 6.</li>
-      <li>We are looking for AI and ML enthusiasts at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
-      <li>I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15.</li>
-      <li>We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
-      <li><a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">Our paper on Turkish image captioning</a> won the Alper Atalay Best Student Paper Award (First Prize) at SIU 2016.</li>
-      <li>Our work on Turkish image description generation is featured on <a href="https://www.youtube.com/watch?v=7wFC-J1Lnzs" target="_blank">national TV</a>.</li>
-      <!--<li>I'll be speaking at <a href="http://devfest.gdg.org.ua/" target="_blank">DevFest Ukraine</a> on Oct 23</li><li>GDG Thessaloniki team did an <a href="http://2015.droidcon.gr/interviews/interview-semih/" target="_blank">interview</a> with me on average work day.</li><li>I'll be speaking at <a href="/talk/an-unexpected-journey" target="_self">Droidcon Greece</a> on Sep 12.</li><li><a href="projects/image-captioning" target="_self">One paper</a> accepted to <a href="http://acl2015.org/" title="ACL 2015: Association for Computational Linguistics" target="_blank">ACL 2015</a>.</li><li><a href="projects/image-geolocalization" target="_self">One paper</a> accepted to <a href="http://wacv2015.org/" title="WACV 2015" target="_blank">WACV 2015</a>.</li>-->
+      <li>2018: I'll be speaking at METU about Machine Comprehension and Reasoning with Learning Algorithms on Apr 24.</li>
+      <li>2017: I'll be speaking at <a href="http://securetr.org/index.php?id=speakers" target="_blank">IWICS</a> about AI and its Applications in Cybersecurity on Dec 8.</li>
+      <li>2017: We are organizing an <a href="https://www.meetup.com/Yapay-Zeka-ve-Makine-Ogrenmesi-Meetup/" target="_blank">AI and ML meetup</a> in Ankara, starting on Nov 6.</li>
+      <li>2017: We are looking for AI and ML enthusiasts at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
+      <li>2017: I'll be speaking at <a href="http://meetu.ps/38spV0" target="_blank">PyData Istanbul</a> on Apr 15.</li>
+      <li>2016: We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
+      <li>2016: <a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">Our paper on Turkish image captioning</a> won the Alper Atalay Best Student Paper Award (First Prize) at SIU 2016.</li>
+      <li>2016: Our work on Turkish image description generation is featured on <a href="https://www.youtube.com/watch?v=7wFC-J1Lnzs" target="_blank">national TV</a>.</li>
+      <li>2015: I'll be speaking at <a href="http://devfest.gdg.org.ua/" target="_blank">DevFest Ukraine</a> on Oct 23</li>
+      <li>2015: GDG Thessaloniki team did an <a href="http://2015.droidcon.gr/interviews/interview-semih/" target="_blank">interview</a> with me on average work day.</li>
+      <li>2015: I'll be speaking at <a href="/talk/an-unexpected-journey" target="_self">Droidcon Greece</a> on Sep 12.</li>
+      <li>2015: <a href="projects/image-captioning" target="_self">One paper</a> accepted to <a href="http://acl2015.org/" title="ACL 2015: Association for Computational Linguistics" target="_blank">ACL 2015</a>.</li>
+      <li>2015: <a href="projects/image-geolocalization" target="_self">One paper</a> accepted to <a href="http://wacv2015.org/" title="WACV 2015" target="_blank">WACV 2015</a>.</li>-->
    </ul>
 	
    <br><span class="subsection" id="research"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_self">Research</a></span><br>
