--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li>2015: GDG Thessaloniki team did an <a href="http://2015.droidcon.gr/interviews/interview-semih/" target="_blank">interview</a> with me on average work day.</li>
       <li>2015: I'll be speaking at <a href="/talk/an-unexpected-journey" target="_self">Droidcon Greece</a> on Sep 12.</li>
       <li>2015: <a href="projects/image-captioning" target="_self">One paper</a> accepted to <a href="http://acl2015.org/" title="ACL 2015: Association for Computational Linguistics" target="_blank">ACL 2015</a>.</li>
-      <li>2015: <a href="projects/image-geolocalization" target="_self">One paper</a> accepted to <a href="http://wacv2015.org/" title="WACV 2015" target="_blank">WACV 2015</a>.</li>-->
+      <li>2015: <a href="projects/image-geolocalization" target="_self">One paper</a> accepted to <a href="http://wacv2015.org/" title="WACV 2015" target="_blank">WACV 2015</a>.</li>
    </ul>
 	
    <br><span class="subsection" id="research"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_self">Research</a></span><br>
