Added EMNLP paper

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
    </ul>
    <br><span class="subsection" id="papers"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_blank">Papers</a></span>
    <ul class="bullet">
+<li><b>RecipeQA: A Challenge Dataset for Multimodal Comprehension of Cooking Recipes</b>
+  <br><u>S. Yagcioglu</u>, A. Erdem, E. Erdem, N. Ikizler-Cinbis
+  <br>[EMNLP18] [<a href="https://arxiv.org/abs/1809.00812" target="_self">pdf</a>] [<a href="https://hucvl.github.io/recipeqa/" target="_self">project</a>]
+  <br><br>
+</li>
       <li><b>TasvirEt: A Benchmark Dataset for Automatic Turkish Description Generation from Images</b>
   <br>M. E. Unal, B. Citamak, <u>S. Yagcioglu</u>, A. Erdem, E. Erdem, N. Ikizler-Cinbis, R. Cakici
   <br>[SIU16] [<a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">pdf</a>] [<a href="/projects/tasviret" target="_self">project</a>] <font color="#cc0000"><b>Best Paper Award</b></font><br><br></li>
