--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>2018: <a href="https://hucvl.github.io/recipeqa/" target="_self">Our paper</a> on Multimodal Machine Comprehension is accepted to EMNLP 2018.</li>
       <li>2018: I'll be speaking at METU about Machine Comprehension and Reasoning with Learning Algorithms on Apr 24.</li>
       <li>2017: I'll be speaking at <a href="http://securetr.org/index.php?id=speakers" target="_blank">IWICS</a> about AI and its Applications in Cybersecurity on Dec 8.</li>
       <li>2017: We are organizing an <a href="https://www.meetup.com/Yapay-Zeka-ve-Makine-Ogrenmesi-Meetup/" target="_blank">AI and ML meetup</a> in Ankara, starting on Nov 6.</li>
