--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>2018: I'll be speaking at Karadeniz Technical University about AI in Product Development on Dec 11.</li>
+      <li>2018: I'll be guest lecturer at Bilkent University for CS491 on Dec 10.</li>
+      <li>2018: I'll be speaking at Konya Technical University about AI in Defence on Nov 6.</li>
       <li>2018: <a href="https://hucvl.github.io/recipeqa/" target="_self">Our paper</a> on Multimodal Machine Comprehension is accepted to EMNLP 2018.</li>
       <li>2018: I'll be speaking at METU about Machine Comprehension and Reasoning with Learning Algorithms on Apr 24.</li>
       <li>2017: I'll be speaking at <a href="http://securetr.org/index.php?id=speakers" target="_blank">IWICS</a> about AI and its Applications in Cybersecurity on Dec 8.</li>
@@ -91,6 +94,8 @@
    </ul>
    <br><span class="subsection" id="talks"><a href="#talks" target="_self">Talks</a></span><br>
    <ul class="bullet">
+       <li><a href="#" target="_self">AI in Product Development</a></li>
+       <li><a href="#" target="_self">Machine Learning in the Wild</a></li>
        <li><a href="#" target="_self">How Machines Learn</a></li>
        <li><a href="talks/teaching-machines-to-see" target="_self">Teaching Machines to Understand What They See</a></li>
       <!--<li><a href="talks/build-your-thing-in-a-weekend" target="_self">Build Your Thing In A Weekend</a></li>-->
