--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
-      <li>2018: I'll be speaking at Karadeniz Technical University about AI in Product Development on Dec 11.</li>
+      <li>2018: I'll be speaking at KTU about AI in Product Development on Dec 11.</li>
       <li>2018: I'll be guest lecturer at Bilkent University for CS491 on Dec 10.</li>
       <li>2018: I'll be speaking at Konya Technical University about AI in Defence on Nov 6.</li>
       <li>2018: <a href="https://hucvl.github.io/recipeqa/" target="_self">Our paper</a> on Multimodal Machine Comprehension is accepted to EMNLP 2018.</li>
