--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
    <br><br>
    <span class="subsection" id="news"><a href="http://www.twitter.com/semihyagcioglu" target="_blank">News</a></span>
    <ul class="bullet">
+      <li>2018: We're looking for two Sr. Full Stack Software Engineers to work on AI projects at <a href="https://www.stm.com.tr/en/" target="_blank">STM</a>.</li>
       <li>2018: I'll be speaking at KTU about AI in Product Development on Dec 11.</li>
-      <li>2018: I'll be guest lecturer at Bilkent University for CS491 on Dec 10.</li>
+      <li>2018: I'll be a guest lecturer at Bilkent University for CS491 on Dec 10.</li>
       <li>2018: I'll be speaking at Konya Technical University about AI in Defence on Nov 6.</li>
       <li>2018: <a href="https://hucvl.github.io/recipeqa/" target="_self">Our paper</a> on Multimodal Machine Comprehension is accepted to EMNLP 2018.</li>
       <li>2018: I'll be speaking at METU about Learning Algorithms on Apr 24.</li>
@@ -47,11 +48,11 @@
       <li>2016: We released <a href="/projects/tasviret" target="_self">TasvirEt dataset</a>, containing Turkish captions for Flickr8K dataset.</li>
       <li>2016: <a href="http://web.cs.hacettepe.edu.tr/~aykut/papers/siu16_tasviret.pdf" target="_self">Our paper on Turkish image captioning</a> won the Alper Atalay Best Student Paper Award (First Prize) at SIU 2016.</li>
       <li>2016: Our work on Turkish image description generation is featured on <a href="https://www.youtube.com/watch?v=7wFC-J1Lnzs" target="_blank">national TV</a>.</li>
-      <li>2015: I'll be speaking at <a href="http://devfest.gdg.org.ua/" target="_blank">DevFest Ukraine</a> on Oct 23</li>
+      <!--<li>2015: I'll be speaking at <a href="http://devfest.gdg.org.ua/" target="_blank">DevFest Ukraine</a> on Oct 23</li>
       <li>2015: GDG Thessaloniki team did an <a href="http://2015.droidcon.gr/interviews/interview-semih/" target="_blank">interview</a> with me on average work day.</li>
       <li>2015: I'll be speaking at <a href="/talk/an-unexpected-journey" target="_self">Droidcon Greece</a> on Sep 12.</li>
       <li>2015: <a href="projects/image-captioning" target="_self">One paper</a> accepted to <a href="http://acl2015.org/" title="ACL 2015: Association for Computational Linguistics" target="_blank">ACL 2015</a>.</li>
-      <li>2015: <a href="projects/image-geolocalization" target="_self">One paper</a> accepted to <a href="http://wacv2015.org/" title="WACV 2015" target="_blank">WACV 2015</a>.</li>
+      <li>2015: <a href="projects/image-geolocalization" target="_self">One paper</a> accepted to <a href="http://wacv2015.org/" title="WACV 2015" target="_blank">WACV 2015</a>.</li>-->
    </ul>
 	
    <br><span class="subsection" id="research"><a href="https://scholar.google.com/citations?user=FWKVjw0AAAAJ&amp;hl=en" target="_self">Research</a></span><br>
