--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li>2018: I'll be speaking at KTU about AI in Product Development on Dec 11.</li>
       <li>2018: I'll be a guest lecturer at Bilkent University for CS491 on Dec 10.</li>
       <li>2018: I'll be speaking at Konya Technical University about AI in Defence on Nov 6.</li>
+      <li>2018: Our work on Multimodal Comprehension <a href="https://www.technologyreview.com/s/612378/the-quirky-ways-ai-researchers-gather-data-to-feed-their-algorithms/" target="_self">is covered by MIT Technology Review.</a></li>
       <li>2018: <a href="https://hucvl.github.io/recipeqa/" target="_self">Our paper</a> on Multimodal Machine Comprehension is accepted to EMNLP 2018.</li>
       <li>2018: I'll be speaking at METU about Learning Algorithms on Apr 24.</li>
       <li>2017: I'll be speaking at <a href="http://securetr.org/index.php?id=speakers" target="_blank">IWICS</a> about AI and its Applications in Cybersecurity on Dec 8.</li>
